logs/cloudpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/cloudpy'...
Compiling './lib/python3.5/site-packages/cloudpy/cloudpy_config.py'...
***   File "./lib/python3.5/site-packages/cloudpy/cloudpy_config.py", line 24
    print Config().host
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudpy/cloudpy_deps.py'...
***   File "./lib/python3.5/site-packages/cloudpy/cloudpy_deps.py", line 225
    print mf.mods
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cloudpy/cloudpy_main.py'...
***   File "./lib/python3.5/site-packages/cloudpy/cloudpy_main.py", line 41
    print "Packing...\n*****************\n"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cloudpy/cloudpy_struct.py'...
***   File "./lib/python3.5/site-packages/cloudpy/cloudpy_struct.py", line 36
    print DirStruct().SRC_DIR
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudpy-0.3.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sh-1.12.14.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
